--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,8 @@ nav:
       - C/C++: 
         - C内存模型: ARM-Linux/c_memory_layout.md
         - CRC16: ARM-Linux/crc16.md
+        - C宏定义#与##: ARM-Linux/c_micro_jing.md
+
       - Linux:
         - 构建内核源码树: ARM-Linux/build_linux_source_tree.md
         - 常用shell命令: ARM-Linux/linux_shell_cmd.md
