--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ nav:
         - C内存模型: ARM-Linux/c_memory_layout.md
         - CRC16: ARM-Linux/crc16.md
         - C宏定义#与##: ARM-Linux/c_micro_jing.md
+        - 补码: ARM-Linux/complement.md
 
       - Linux:
         - 构建内核源码树: ARM-Linux/build_linux_source_tree.md
@@ -105,6 +106,7 @@ extra:
 # Extensions
 markdown_extensions:
   - admonition
+  - footnotes
   - codehilite:
       guess_lang: false
       linenums: true
