--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,8 +64,13 @@ nav:
       - PCM: Multimedia/pcm.md
       - OPUS: Multimedia/opus.md
       
-    - Hardware:
-      - Hardware: Hardware/hardware.md
+    - STM32:
+      - STM32串口: 
+        - STM32串口编程之中断方式: STM32/stm32_hal_uart.md
+		
+      - STM32定时器:
+        - STM32定时器编程之定时中断: STM32/stm32_hal_uart.md
+        - STM32定时器编程之PWM: STM32/stm32_hal_uart.md
       
     - Tools:
       - UML: Tools/PlantUML.md
