--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ nav:
       - FFMPEG: Multimedia/ffmpeg_command.md
       - PCM: Multimedia/pcm.md
       - OPUS: Multimedia/opus.md
+      - WAV: Multimedia/wav_foramt.md
       
     - STM32:
       - STM32串口: 
