--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,7 +67,8 @@ nav:
       - 彻底理解YUV格式: Multimedia/yuv.md
       - 音视频同步: Multimedia/av_synchronization.md
       - nginx: Multimedia/compile_install_nginx.md
-      - FFMPEG: Multimedia/ffmpeg_command.md
+      - FFMPEG命令: Multimedia/ffmpeg_command.md
+      - FFMPEG API: Multimedia/ffmpeg_api.md
       - EasyDarwin: Multimedia/easydarwin.md
       - PCM: Multimedia/pcm.md
       - WAV: Multimedia/wav_foramt.md
